--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ table {
   border-collapse: collapse;
   width: 100%;
   max-width: 800px;
-  margin: 0 auto;
+  margin: 1em auto;
 }
 table tr {
   background-color: #e6f1f6;
@@ -98,6 +98,23 @@ button {
 .era2 {
   color: var(--secondary-color);
 }
+
+.eto-list {
+  display: block;
+}
+
+.eto-list ul {
+  list-style-type: disc;
+  list-style-position: inside;
+  list-style: none;
+  display: inline-block;
+}
+
+.eto-list ul li {
+  padding: 0.5em;
+  text-align: left;
+}
+
 /* スマホ用スタイル */
 /* stylelint-disable-next-line */
 @media screen and (max-width: 768px) {
@@ -144,5 +161,8 @@ button {
     flex-direction: column;
     align-items: center;
     gap: 0;
+  }
+  .eto-list ul {
+    padding-left: 0;
   }
 }
