--- a/style.css
+++ b/style.css
@@ -120,6 +120,24 @@ ul.eto-list {
   text-align: left;
 }
 
+html {
+  height: 100%;
+}
+body {
+  margin: 0;
+  padding: 0;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.content {
+  flex: 1;
+}
+
+footer {
+  width: 100%;
+}
+
 /* スマホ用スタイル */
 @media screen and (max-width: 768px) {
   body {
